--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "zzc-react-native-cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "cli.js",
+  "main": "./cli.js",
   "directories": {
     "lib": "lib"
+  },
+  "bin": {
+    "zrn": "./cli.js"
   },
   "dependencies": {
     "colors": "^1.3.3",
