--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "zrn": "./cli.js"
   },
   "dependencies": {
+    "archiver": "^3.0.0",
     "colors": "^1.3.3",
     "commander": "^2.20.0",
-    "copy-dir": "^1.1.0"
+    "copy-dir": "^1.1.0",
+    "request": "^2.88.0",
+    "zzc-post-cdn": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
