--- a/package.json
+++ b/package.json
@@ -1,48 +1,35 @@
 {
-	"name": "BookRN",
+	"name": "zzc-react-native-cli",
 	"version": "1.1.1",
 	"description": "",
 	"main": "./cli.js",
 	"directories": {
-		"lib": "lib"
+	  "lib": "lib"
 	},
 	"bin": {
-		"zrn": "./cli.js"
+	  "zrn": "./cli.js"
 	},
 	"dependencies": {
-		"react": "16.8.3",
-		"react-native": "0.59.5",
-		"axios": "0.18.0",
-		"react-native-svg": "9.3.7",
-		"react-native-svg-transformer": "0.12.1",
-		"@react-native-community/async-storage": "1.3.3"
+	  "archiver": "^3.0.0",
+	  "colors": "^1.3.3",
+	  "commander": "^2.20.0",
+	  "copy-dir": "^1.1.0",
+	  "request": "^2.88.0",
+	  "zzc-post-cdn": "^1.0.0"
 	},
-	"devDependencies": {
-		"@babel/core": "7.4.5",
-		"@babel/runtime": "7.4.5",
-		"babel-jest": "24.8.0",
-		"jest": "24.8.0",
-		"metro-react-native-babel-preset": "0.54.1",
-		"react-test-renderer": "16.8.3"
-	},
+	"devDependencies": {},
 	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest",
-		"init": "npm run clone_ios && npm run clone_android && npm run clone_zzc_video_android && npm run clone_zzc_android_libs && npm run install_dev",
-		"install_dev": "npm install && react-native link react-native-svg && react-native link @react-native-community/async-storage",
-		"clone_ios": "git clone -b master ssh://git@git-repositories.zuzuche.com:10023/zzc_mobile/zzc_app/zzc_ios.git ./ios",
-		"clone_android": "git clone -b master ssh://git@git-repositories.zuzuche.com:10023/zzc_mobile/zzc_app/zzc_android.git ./android",
-		"clone_zzc_video_android": "git clone -b master ssh://git@git-repositories.zuzuche.com:10023/zzc_mobile/zuzuche_android_library/zzc_video_android.git ./zzc_video_android",
-		"clone_zzc_android_libs": "git clone -b master ssh://git@git-repositories.zuzuche.com:10023/zzc_mobile/zuzuche_android_library/zzc_android_libs.git ./zzc_android_libs"
+	  "test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/LLLLLamHo/zzc-react-native-cli.git"
+	  "type": "git",
+	  "url": "git+https://github.com/LLLLLamHo/zzc-react-native-cli.git"
 	},
 	"author": "",
 	"license": "ISC",
 	"bugs": {
-		"url": "https://github.com/LLLLLamHo/zzc-react-native-cli/issues"
+	  "url": "https://github.com/LLLLLamHo/zzc-react-native-cli/issues"
 	},
 	"homepage": "https://github.com/LLLLLamHo/zzc-react-native-cli#readme"
-}
+  }
+  
